--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "test": "jest",
     "prettier": "npx prettier . --check",
-    "prettier:fix" : "npx prettier . --write"
+    "prettier:fix": "npx prettier . --write"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.53.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
     "prettier": "3.1.0"
   }
