--- a/package.json
+++ b/package.json
@@ -4,22 +4,31 @@
     "description": "Devops first Project\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[p\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[D\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b",
     "main": "index.js",
     "scripts": {
-        "test": "jest",
+        "test": "jest --coverage",
+        "test:watch": "jest --watchAll",
         "prettier": "prettier --check .",
         "prettier:fix": "prettier --write .",
         "lint": "eslint .",
         "lint:fix": "eslint --fix .",
-        "code:fix": "prettier --write . && eslint --fix ."
+        "code:fix": "prettier --write . && eslint --fix .",
+        "commit": "cz"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "cz-conventional-changelog": "^3.3.0",
         "eslint": "^8.53.0",
         "eslint-config-standard": "^17.1.0",
         "eslint-plugin-import": "^2.29.0",
         "eslint-plugin-n": "^16.3.1",
         "eslint-plugin-promise": "^6.1.1",
         "jest": "^29.7.0",
-        "prettier": "3.1.0"
+        "prettier": "3.1.0",
+        "supertest": "^6.3.3"
+    },
+    "config": {
+        "commitizen": {
+            "path": "cz-conventional-changelog"
+        }
     }
 }
