--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "eslint-plugin-import": "^2.29.0",
         "eslint-plugin-n": "^16.3.1",
         "eslint-plugin-promise": "^6.1.1",
+        "jasmine": "^5.1.0",
         "jest": "^29.7.0",
         "prettier": "3.1.0",
         "supertest": "^6.3.3"
