--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,38 @@
-name: Pipeline CI devops project 2
+name: Pipeline CI DevOps Project 2
 
-on :
-  pull_request : 
-    branches : 
-      -main
-  merge_group :
-    branches : 
-      -main
-      
-jobs :
-  test-and-build : 
+on:
+  pull_request:
+  push:
+
+jobs:
+  test-and-build:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name : check-out files from repository
-        uses : actions/checkout@v2
-      
-      - name : Specify the start time
-        run : echo "start time $(date)"
-         
-      - name : Instal dependency
-        run : npm install
+      - name: Check-out files from repository
+        uses: actions/checkout@v2
 
-      - name : Prettier
-        run : npx prettier --check && npx prettier--write
+      - name: Specify the start time
+        run: echo "Start time $(date)"
 
-      - name : Eslint
-        run : npx eslint . && npx eslint --fix .
-      
-      - name : Jest test
-        run : npx jest --coverage
+      - name: Install dependencies
+        run: npm install
 
-      - name : Specify the end time
-        run : echo "end time $(date)"
+      - name: Prettier
+        run: npx prettier --check && npx prettier --write
 
-      - name : build project
-        run : npm build
-      
-      - name : Pipeline status
+      - name: Eslint
+        run: npx eslint . && npx eslint --fix .
+
+      - name: Jest test
+        run: npx jest --coverage
+
+      - name: Specify the end time
+        run: echo "End time $(date)"
+
+      - name: Build project
+        run: npm run build
+
+      - name: Pipeline status
         if: success()
-        run : echo "PIPELINE SUCCESS WITHOUT ERRORS"
+        run: echo "PIPELINE SUCCESS WITHOUT ERRORS"
