--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm install
 
       - name: Prettier
-        run: npx prettier --check && npx prettier --write
+        run: npx prettier --check . && npx prettier --write .
 
       - name: Eslint
         run: npx eslint . && npx eslint --fix .
