--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
         run: npm install
 
       - name: Prettier
-        run: npx prettier --check . && npx prettier --write .
+        run: npx prettier --write .
 
       - name: Eslint
-        run: npx eslint . && npx eslint --fix .
+        run: npx eslint --fix .
 
       - name: Jest test
         run: npx jest --coverage
