--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,11 @@ name: Pipeline CI DevOps Project 2
 
 on:
   pull_request:
+    branches : 
+      - main
   push:
+    branches : 
+      - main
 
 jobs:
   test-and-build:
