--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "lint": "eslint .",
         "lint:fix": "eslint --fix .",
         "code:fix": "prettier --write . && eslint --fix .",
-        "commit": "cz"
+        "commit": "cz",
+        "build": "webpack ./src/app.js -o dist"
     },
     "author": "",
     "license": "ISC",
@@ -31,5 +32,9 @@
         "commitizen": {
             "path": "cz-conventional-changelog"
         }
+    },
+    "dependencies": {
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4"
     }
 }
